--- a/900-lakdiva.Rmd
+++ b/900-lakdiva.Rmd
@@ -47,6 +47,10 @@ _2_ Call SNPs with japonicus for rooted phylo (Species Tree)
 ```{r}
 m71<-read_csv("meta/71-Indo-split.csv")
 m71 %>% filter(Region=="Sri Lanka")
+
+m71 %>% select(Path) %>% write_tsv(file="bamlists/71.bamlist", col_names = FALSE)
+m71 %>% select(Run) %>% write_tsv(file="bamlists/71.names", col_names = FALSE)
+
 ```
 
 ## Trim
@@ -79,7 +83,7 @@ m70 %>% select(Run) %>% write_tsv(file="bamlists/70.names", col_names = FALSE)
 ```
 
 ```{sh, eval=FALSE}
-srun -p high -t 16:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
+srun -p high -t 16:00:00 --mem=32G --nodes=1 --ntasks-per-node=1 --cpus-per-task=12 $HOME/angsd/angsd -P 12  \
 -bam bamlists/70.bamlist -rf genome/lates-lgs.txt \
 -ref  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
 -minInd 63 -minMapQ 10 -minQ 20 -GL 2 -doGLF 2 \
@@ -97,7 +101,7 @@ srun -p high -t 06:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -li
 srun -p high -t 09:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/1000/70-ibs-90.beagle.gz -K 6 -o outputs/1000/70-K6 &
 
 # Generate GLS without doIBS
-srun -p high -t 16:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
+srun -p high -t 16:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 2  \
 -bam bamlists/60.bamlist -rf genome/lates-lgs.txt \
 -anc  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
 -minInd 54 -minMapQ 20 -minQ 20 -GL 1 -doGLF 2 \
@@ -106,3 +110,16 @@ srun -p high -t 16:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 12  \
 -out outputs/1000/70-gls-90 > outputs/1000/70-gls-90.out 2> outputs/1000/70-gls-90.err &
 
 ```
+
+
+# Phylogeny with japonicus
+
+```{sh, eval=FALSE}
+srun -t 72:00:00 -p high --mem=32G --nodes=1 --ntasks-per-node=1 --cpus-per-task=12 $HOME/angsd/angsd -nthreads 24 \
+-minInd 68 -bam bamlists/71.bamlist -ref genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
+-rf genome/lates-lgs.txt -out outputs/1000/snps-wgs  \
+-minMaf 0.05 -minMapQ 20 -minQ 20 -GL 1 -doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
+-doGeno 2 -doPost 1 -postCutoff 0.9 -doPlink 2  > outputs/1000/snps-wgs.out 2> outputs/1000/snps-wgs.err &
+
+```
+
