Setting up to downsample

--- a/900-lakdiva.Rmd
+++ b/900-lakdiva.Rmd
@@ -56,6 +56,7 @@ ind<-m71 %>% filter(Lineage %in% c("IND","lakdiva"))
 ind %>% select(Path) %>% write_tsv(file="bamlists/ind.bamlist", col_names = FALSE)
 ind %>% select(Run) %>% write_tsv(file="bamlists/ind.names", col_names = FALSE)
 
+
 ```
 
 ## Trim
@@ -75,8 +76,13 @@ c %>% as_tibble() %>% write_tsv("900.1-trim.sh", col_names = FALSE)
 Align.... Our new fish have much higher coverage than the old fish.
 
 Set up to downsample to ~7X 
+
+
 ```{r}
-down <- m70 %>% filter
+down <- m70 %>% filter (Lineage == "lakdiva" ) %>% mutate(Frac=7/Coverage) %>% 
+  mutate(Command = paste0("samtools view -bs ", Frac, " ", Path, " > ", "/home/maccamp/lates-wgs/data/downsample/", Run, ".reduced.bam"))
+
+down %>% select(Command) %>% write_tsv(file="900.1-downsample-sl.sh", col_names = FALSE)
 ```
 
 Questions:
@@ -111,6 +117,16 @@ srun -p high -t 8:00:00 --mem=32G --nodes=1 --ntasks-per-node=1 --cpus-per-task=
 -doIBS 1 -doCounts 1 -doCov 1 -makeMatrix 1 -minMaf 0.05 \
 -out outputs/900/70-ibs-90-lca01 > outputs/900/70-ibs-90-lca01.out 2> outputs/900/70-ibs-90-lca01.err &
 
+
+srun -p high -t 04:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/900/70-ibs-90-lca01.beagle.gz -K 2 -o outputs/900/70-K2 &
+srun -p high -t 05:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/900/70-ibs-90-lca01.beagle.gz -K 3 -o outputs/900/70-K3 &
+srun -p high -t 06:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/900/70-ibs-90-lca01.beagle.gz -K 4 -o outputs/900/70-K4 &
+srun -p high -t 06:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/900/70-ibs-90-lca01.beagle.gz -K 5 -o outputs/900/70-K5 &
+srun -p high -t 06:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/900/70-ibs-90-lca01.beagle.gz -K 6 -o outputs/900/70-K6 &
+
+
+
+
 srun -p high -t 04:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/900/70-ibs-90.beagle.gz -K 2 -o outputs/900/70-K2 &
 srun -p high -t 05:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/900/70-ibs-90.beagle.gz -K 3 -o outputs/900/70-K3 &
 srun -p high -t 06:00:00 --mem=32G --nodes=1 $HOME/angsd/misc/NGSadmix -P 12 -likes outputs/900/70-ibs-90.beagle.gz -K 4 -o outputs/900/70-K4 &
@@ -126,6 +142,16 @@ srun -p high -t 32:00:00 --mem=32G --nodes=1 $HOME/angsd/angsd -P 2  \
 -minMaf 0.05 \
 -out outputs/900/70-gls-90 > outputs/900/70-gls-90.out 2> outputs/900/70-gls-90.err &
 
+#Just ind, 23
+
+srun -p high -t 12:00:00 --mem=32G --nodes=1 --ntasks-per-node=1 --cpus-per-task=4 $HOME/angsd/angsd -P 4  \
+-bam bamlists/ind.bamlist -rf genome/lates-lgs.txt \
+-ref  genome/GCF_001640805.2_TLL_Latcal_v3_genomic.fna \
+-minInd 21 -minMapQ 10 -minQ 20 -GL 2 -doGLF 2 \
+-doMajorMinor 1 -doMaf 1 -SNP_pval 1e-6 \
+-doIBS 1 -doCounts 1 -doCov 1 -makeMatrix 1 -minMaf 0.05 \
+-out outputs/900/in-ibs-90 > outputs/900/ind-ibs-90.out 2> outputs/900/ind-ibs-90.err &
+	
 ```
 
 
@@ -136,7 +162,7 @@ Visualize covMat
 ```{r}
 meta<-m70
 meta$Region<-factor(meta$Region, levels=c("Queensland","Northern Territory","Papua New Guinea",
-                                              "Indonesia-K","Indonesia-SJ","Indonesia-SU","Philippines",
+                                              "Indonesia-K","Indonesia-SU","Indonesia-SJ","Philippines",
                                               "Vietnam","Cambodia","Thailand", "Bangladesh",
                                               "India Eastern Coast","India Western Coast","Sri Lanka"))
 
@@ -148,7 +174,7 @@ round(median(meta$Coverage),2)
 ```
 
 ```{r}
-m <- as.matrix(read.table("outputs/900/70-ibs-90-lca01.covMat"))
+m <- as.matrix(read.table("outputs/900/70-ibs-90.covMat"))
 eig <- eigen(m)
 var<-eig$values/sum(eig$values)
 cumvar<-cumsum(eig$values)/sum(eig$values)
@@ -208,6 +234,150 @@ ggsave("outputs/900/combined-wgspcs.pdf", width=13, height=6)
 ggsave("outputs/900/combined-wgspcs.jpeg", width=13, height=6)
 
 ```
+
+Plot Admix
+
+
+```{r, echo=FALSE}
+PlotAdmix<- function(file, meta) {
+
+q<-read_delim(file, delim=" ", col_names=FALSE)
+#Make generic colnames
+
+nums<-1:length(colnames(q))
+mynames<-paste0("Q",nums)
+
+qs<-length(colnames(q))-1
+
+colnames(q)<-mynames
+
+#Last col empty
+q<-q[1:length(colnames(q))-1]
+
+#Bind met and arrange 
+df<-bind_cols(q, meta) %>% arrange(Region) %>% mutate(Index=1:n())
+df$Region<-factor(df$Region, levels=unique(df$Region))
+
+rdf<-df %>% dplyr::select(Region, Index, colnames(q) ) %>% gather(key=Ancestry, value=Q, 3:(3+length(colnames(q))-1))
+
+#Make names for structure-like plot
+labels<-rdf %>% group_by(Region) %>% mutate(Start=min(Index), Stop=max(Index)) %>% 
+  select(Region,Start,Stop) %>% unique() %>% 
+  mutate(Position=round((Start+Stop)/2)) %>% ungroup() %>% unique()
+
+#Plot
+ggplot(rdf) + 
+  geom_col(aes(x=Index,y=Q, fill=Ancestry), color="NA", size = 0, width = 1) +
+  geom_segment(data=labels, x = labels$Start - 0.5, y=0, xend = labels$Start-0.5, yend=1, alpha=0.9, size=0.25) +
+  geom_segment(data=labels, x = labels$Stop[length(labels$Stop)]  + 0.5, y=0, 
+               xend= labels$Stop[length(labels$Stop)] + 0.5, yend=1,  alpha=0.9,
+               size=0.25) +
+  geom_segment(x=0+0.5, xend= labels$Stop[length(labels$Stop)]+0.5, y=1, yend=1, alpha=0.9, size=0.25) +
+  geom_segment(x=0+0.5, xend= labels$Stop[length(labels$Stop)]+0.5, y=0, yend=0, alpha=0.9, size=0.25) +
+  ylim(-0.1,1.01) +
+  xlim(-0.1, labels$Stop[length(labels$Stop)]+1) +
+  theme(panel.background = element_blank()) +
+  xlab("") +
+  ylab("Q\n") +
+  theme(legend.position = "") +
+  theme(axis.text = element_text(size=10, face="bold")) +
+  theme(axis.title.y=element_text(size=14, face="bold")) +
+  scale_x_continuous(breaks=labels$Position, labels=labels$Region) +
+  theme(axis.text.x = element_text(angle=45, hjust=1)) +
+  #theme(axis.text.x=element_blank()) +
+  scale_fill_viridis_d(option="viridis") +
+  theme(axis.ticks.x = element_blank())
+
+}
+```
+
+```{r}
+PlotAdmix("outputs/900/70-K2.qopt", meta)
+```
+
+
+```{r}
+PlotAdmix("outputs/900/70-K3.qopt", meta)
+```
+
+
+```{r}
+PlotAdmix("outputs/900/70-K4.qopt", meta)
+```
+
+```{r}
+PlotAdmix("outputs/900/70-K5.qopt", meta)
+```
+
+```{r}
+PlotAdmix("outputs/900/70-K6.qopt", meta)
+```
+
+## Just IND fish
+
+
+```{r}
+m <- as.matrix(read.table("outputs/900/in-ibs-90.covMat"))
+eig <- eigen(m)
+var<-eig$values/sum(eig$values)
+cumvar<-cumsum(eig$values)/sum(eig$values)
+
+head(var)
+head(cumvar)
+```
+
+
+For figure  
+
+```{r}
+covs<-eig$vectors[,1:3] %>% as_tibble() %>% bind_cols(meta %>% filter(Lineage %in% c("lakdiva","IND"))) 
+
+text12<-covs %>% select(Run, Region, V1, V2) %>%
+  group_by(Region) %>% summarize(Count=n(), x=mean(V1), y=mean(V2))
+
+pc12<-ggplot(covs) +
+  geom_point(aes(x=V1, y=V2, fill=Region, shape=Lineage), size=3, alpha=0.75) +
+#  geom_text_repel(data=text12, aes(x=x, y=y, label=Region), max.overlaps = Inf) +
+  xlab(paste("PC1", " ", round((100*var[1]),2), "%", sep = "")) +
+  ylab(paste("PC2", " ", round((100*var[2]),2), "%", sep = "")) +
+  theme_bw() +
+  theme(panel.grid=element_blank()) +
+  scale_fill_viridis_d(option="magma") +
+  ggtitle("A") +
+  theme(plot.title = element_text(size=18, face="bold")) +
+ scale_shape_manual(values=c(23,25)) +
+  guides(fill = guide_legend(override.aes = list(pch = 22))) +
+ theme(legend.position = "none")
+
+pc12
+```
+```{r}
+text13<-covs  %>% select(Run, Region, V1, V3, Lineage) %>% filter(Lineage %in% c("IND","lakdiva")) %>% 
+  group_by(Region) %>% summarize(Count=n(), x=mean(V1), y=mean(V3))
+
+pc13<-ggplot(covs) +
+  geom_point(aes(x=V1, y=V3, fill=Region, shape=Lineage), size=3, alpha=0.75) +
+#  geom_text_repel(data=text13, aes(x=x, y=y, label=Region), max.overlaps = Inf) +
+  xlab(paste("PC1", " ", round((100*var[1]),2), "%", sep = "")) +
+  ylab(paste("PC3", " ", round((100*var[3]),2), "%", sep = "")) +
+  theme_bw() +
+  theme(panel.grid = element_blank()) +
+  scale_fill_viridis_d(option="magma") +
+  ggtitle("B") +
+  theme(plot.title = element_text(size=18, face="bold")) +
+  scale_shape_manual(values=c(23,25)) +
+  guides(fill = guide_legend(override.aes = list(pch = 22))) 
+
+pc13
+```
+
+```{r}
+ggarrange(pc12,pc13,ncol=2,widths=c(1,1.3))
+ggsave("outputs/900/ind-wgspcs.pdf", width=13, height=6)
+ggsave("outputs/900/ind-wgspcs.jpeg", width=13, height=6)
+
+```
+
 # Phylogeny with japonicus
 
 At 95% threshold 
